--- a/sass/theme/_main.scss
+++ b/sass/theme/_main.scss
@@ -19,6 +19,14 @@
 	background-color: var(--primary-colour);
 }
 
+.tribe-events-single-event-title {
+	line-height: .5;
+}
+
+.tribe-events-content p {
+	font-size: 14px;
+}
+
 .tribe-common .tribe-common-c-svgicon,
 .tribe-events-cal-links .tribe-events-gcal,
 .tribe-events-cal-links .tribe-events-ical,
