--- a/style.css
+++ b/style.css
@@ -710,6 +710,10 @@ form label {
 	display: none;
 }
 
+span.like {
+	cursor: pointer;
+}
+
 .user-profile-info img {
 	border-radius: 100%;
 }
@@ -1007,7 +1011,7 @@ button[data-micromodal-trigger="event-modal"].fixed {
 }
 
 .accordion.is-open .answer {
-	max-height: 100px;
+	max-height: 400px;
 	opacity: 1;
 	margin-top: .5rem;
 }
